# sandreco

./: .clang-format  .gitattributes  .gitignore  .gitlab-ci.yml  CMakeLists.txt  CalDigi.cpp  Makefile  PackageConfig.cmake.in  README.md  checkfast.cpp  clang-format-all.sh  draw.cpp  env.sh  loader.C  neutrons.cpp  radmass.cpp  rootlogon.C  setup.sh  validation.ipynb  wireinfo.txt
.github/workflows/: build-and-test-sandreco.yml  build-sand-geometry,yml  build-sand-geometry.yml  build-sandreco.yml  sand-ci-dev.yml  sandreco-ci.yml  test-sandreco.yml
CalDigi/: CalDigi.cpp
STTDigi/: STTDigi.cpp
analysis/: analysis.cpp
bugfix/: .gitignore  Makefile  main.cc
checkfast/: checkfast.cpp
digitization/: .gitignore  Makefile  digitization.cpp
draw/: draw.cpp
dump/: dump.cpp
icons/: down.xpm  exit.xpm  left.xpm  next.xpm  open.xpm  previous.xpm  reload.xpm  right.xpm  save-picture.xpm  up.xpm  zoom-detector.xpm  zoom-event.xpm  zoom-in.xpm  zoom-out.xpm  zoom-vertex.xpm
include/: .gitignore  CLine3D.h  CellInfo.h  Linkdef.h  SANDClustering.h  SANDDigitization.h  SANDDigitizationEDEPSIM.h  SANDDigitizationFLUKA.h  SANDDisplayUtils.h  SANDECALCellInfo.h  SANDENDCAPModInfo.h  SANDEventDisplay.h  SANDEventDisplayLinkDef.h  SANDGeoManager.h  SANDGeoManagerLinkDef.h  SANDKFIO_LinkDef.h  SANDKFTrack.h  SANDKalmanFilter.h  SANDRecoUtils.h  SANDRecoUtilsLinkDef.h  SANDSTTTubeInfo.h  SANDTrackerCell.h  SANDTrackerCluster.h  SANDTrackerClusterCollection.h  SANDTrackerClustersContainer.h  SANDTrackerClustersInPlane.h  SANDTrackerDigitCollection.h  SANDTrackerModule.h  SANDTrackerModuleConfig.h  SANDTrackerPlane.h  SANDTrackerUtils.h  SANDTrackletFinder.h  SANDWireInfo.h  STTInfo.h  STTKFClusterManager.h  STTKFGeoManager.h  STTKFIO_LinkDef.h  STTKFKalmanFilter.h  STTKFTrack.h  StructLinkDef.h  (+5 more)
loader/: loader.C
make-plots/: .gitignore  check_n.cpp  make-plots.cpp  make_plots.cpp
myMinimalFit/: .gitignore  Makefile  ana.cpp  env.sh  main.cc  myMinimalFit  simple.cc
partCaloDE/: partCaloDE.cpp
radmass/: radmass.cpp
reco/: Reco.cpp  reco.cpp
reconstruction/: reconstruction.cpp
scripts/: clang-format-all.sh  env.sh  process.sh
src/: .gitignore  CLine3D.cpp  CellInfo.cpp  SANDClustering.cpp  SANDDigitization.cpp  SANDDigitizationEDEPSIM.cpp  SANDDigitizationFLUKA.cpp  SANDDigitizeDrift.cpp  SANDDisplayUtils.cpp  SANDECALCellInfo.cpp  SANDECALClustering.cpp  SANDENDCAPModInfo.cpp  SANDEventDisplay.cpp  SANDGeoManager.cpp  SANDKFTrack.cpp  SANDKalmanFilter.cpp  SANDMeasurementsBuilder.cpp  SANDRecoUtils.cpp  SANDSTTTubeInfo.cpp  SANDTrackerCell.cpp  SANDTrackerCluster.cpp  SANDTrackerClusterCollection.cpp  SANDTrackerClustersContainer.cpp  SANDTrackerClustersInPlane.cpp  SANDTrackerDigitCollection.cpp  SANDTrackerModule.cpp  SANDTrackerPlane.cpp  SANDTrackerUtils.cpp  SANDTrackletFinder.cpp  SANDWireInfo.cpp  STTInfo.cpp  STTKFClusterManager.cpp  STTKFGeoManager.cpp  STTKFKalmanFilter.cpp  STTKFTrack.cpp  analysis.cpp  calo.cpp  clustering.cc  clustering.cpp  clustering2.cc  (+20 more)
struct/: Makefile  struct.cxx  struct.h
tests/: 1000-mu-in-FV.mac  test_DigitizeDrift.cpp  test_DisplayReco.cpp  test_reconstructionNLL.cpp
tests/python_tools/: AlgoPerformances.ipynb  Circle.py  EventDisplay.ipynb  EventDisplay.py  Helix.py  Line2D.py  NLLtreeoutReader.py  dg_wire.py  tDigitReader.py  test_import.ipynb  test_import.py  utils.py
ups/: product_deps
